--- a/instrumentation/pom.xml
+++ b/instrumentation/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>micrometer-native-monolith</module>
-		<module>micrometer-otel-monolith</module>
+		<module>observation-api</module>
+		<module>otel-sdk</module>
 	</modules>
 </project>
