--- a/instrumentation/0-instrumentation-observation-api/pom.xml
+++ b/instrumentation/0-instrumentation-observation-api/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>instrumentation</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.example.no-instrumentation.micrometer-native</groupId>
-    <artifactId>micrometer-native-monolith</artifactId>
+    <groupId>com.exampl</groupId>
+    <artifactId>0-instrumentation-observation-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
